# trebok

./: .gitignore  AGENTS.md  IDEA.md  README.md  SPEC.md
.claude/: settings.json
.claude/commands/: moth.md
.gemini/commands/: spec.toml
.moth/: .current  config.yml
.moth/doing/: ddqv0-med-processing_ollama_streaming_input_line_by_line.md  plapm-med-import_from_existing.md  qtscn-med-separate_node_from_commands.md
.moth/done/: cf7k5-med-dissect_async.md  s7nod-med-refactor_and_cleanup_ollama_rs.md  u9mjb-med-node_lister.md  vkzhz-med-ls_extensions.md  wra89-med-fix_ls.md
bok/: .gitignore  Cargo.toml  bok.conf
bok-vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
bok-vscode/src/: extension.ts
bok/.moth/doing/: ddqv0-med-processing_ollama_streaming_input_line_by_line.md
bok/completions/: _bok  _bok.ps1  bok.bash  bok.elv  bok.fish
bok/src/: config.rs  llm.rs  main.rs
bok/src/commands/: check.rs  copyedit.rs  generate.rs  import.rs  init.rs  lineedit.rs  mod.rs  node.rs  vis.rs
bok/src/llm_providers/: ollama.rs
bok/src/node/: mod.rs  node.rs  node_manager.rs
bok/tests/: e2e_test.sh  integration_import_test.rs
spec/: 2025-11-24-session.md
