[package]
name = "bok"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive", "unstable-styles"] }
clap_complete = "4.5.0"
config = "0.14"
glob = "0.3.3"
hocon = "0.9.0"
murmur3 = "0.5.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
bytes = "1.6.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10.1"

[features]
ollama_tests = []
